NoSql panels can display more than one NoSql engine

--- a/Plugin/webroot/css/debug_kit_ex.css
+++ b/Plugin/webroot/css/debug_kit_ex.css
@@ -4,7 +4,7 @@
 	width: 80px
 }
 
-#debug-kit-toolbar td.time {
+#debug-kit-toolbar td.time, #debug-kit-toolbar th.time {
 	width: 80px;
 	text-align: right;
 	padding-right: 8px;
