--- a/webroot/css/debug_kit_ex.css
+++ b/webroot/css/debug_kit_ex.css
@@ -198,3 +198,39 @@ tr.write td {
 	color: #999;
 	font-size: 10px;
 }
+
+#debug-kit-toolbar .alert-error {
+	background: #ffcc00;
+	background-repeat: repeat-x;
+	background-image: -moz-linear-gradient(top, #ffcc00, #E6B800);
+	background-image: -ms-linear-gradient(top, #ffcc00, #E6B800);
+	background-image: -webkit-gradient(linear, left top, left bottom, from(#ffcc00), to(#E6B800));
+	background-image: -webkit-linear-gradient(top, #ffcc00, #E6B800);
+	background-image: -o-linear-gradient(top, #ffcc00, #E6B800);
+	background-image: linear-gradient(top, #ffcc00, #E6B800);
+	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+	border: 1px solid rgba(0, 0, 0, 0.2);
+	text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
+	-webkit-border-radius: 4px;
+	-moz-border-radius: 4px;
+	border-radius: 4px;
+	-webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.25);
+	-moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.25);
+	box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.25);
+	
+	color: #000;
+	padding: 0.8em;
+	margin: 1em 0;
+	font-size: 120%;
+}
+
+#debug-kit-toolbar .alert-error code {
+	background-color: rgba(255,255,255,0.4);
+	-webkit-border-radius: 2px;
+	-moz-border-radius: 2px;
+	border-radius: 2px;
+	padding: 0.25em;
+	-webkit-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.6), 0 1px 0 rgba(0,0,0,0.3) inset;
+	-moz-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.6), 0 1px 0 rgba(0,0,0,0.3) inset;
+	box-shadow: 0 1px 0 rgba(255, 255, 255, 0.6), 0 1px 0 rgba(0,0,0,0.3) inset;
+}
